# poketwo-next

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  crowdin.yml  docker-compose.yml  license-header.txt  rustfmt.toml
.github/workflows/: build.yml
command-framework/: Cargo.toml
command-framework-macros/: Cargo.toml
command-framework-macros/src/: command.rs  group.rs  lib.rs  util.rs
command-framework-test/: Cargo.toml
command-framework-test/src/: main.rs
command-framework/src/: client.rs  command.rs  component_listener.rs  context.rs  lib.rs
command-framework/src/component_listener/: mod.rs  pagination.rs
database/: .formatter.exs  README.md  mix.exs
database/config/: config.exs  dev.secret.exs  releases.exs
database/lib/mix/tasks/db/: load.ex  set_spawn_weights.ex
database/lib/poketwo/: database.ex
database/lib/poketwo/database/: application.ex  endpoint.ex  pagination.ex  repo.ex  utils.ex
database/lib/poketwo/database/filter/: numeric.ex
database/lib/poketwo/database/models/: auction.ex  generation.ex  generation_info.ex  language.ex  market_listing.ex  pokedex_entry.ex  pokemon.ex  region.ex  region_info.ex  species.ex  species_info.ex  type.ex  type_info.ex  user.ex  variant.ex  variant_info.ex  variant_type.ex
database/lib/poketwo/database/pagination/: market_listing.ex  pokemon.ex
database/lib/poketwo/database/v1/database/: create_market_listing.ex  create_pokemon.ex  create_user.ex  delete_market_listing.ex  get_market_list.ex  get_market_listing.ex  get_pokemon.ex  get_pokemon_list.ex  get_random_spawn.ex  get_species.ex  get_user.ex  get_variant.ex  purchase_market_listing.ex  server.ex  update_pokemon.ex  update_user.ex
database/priv/repo/migrations/: 20220413160035_initial.exs  20220518173440_add_fields.exs  20220610082449_add_user_data.exs  20220621010358_add_spawn_weight.exs  20220623011159_add_selected_pokemon.exs  20220625231008_add_balances.exs  20220712151155_add_market_and_auctions.exs
database/test/poketwo/: database_test.exs
emojis/: Cargo.toml
emojis/src/: lib.rs  pokemon_emojis.rs
gateway/: .gitignore  Cargo.toml
gateway-client/: Cargo.toml
gateway-client/src/: lib.rs
gateway/src/: amqp.rs  config.rs  gateway.rs  main.rs
i18n-rust/: Cargo.toml
i18n-rust/src/: lib.rs
imgen/: Cargo.toml
imgen/src/: config.rs  image_cache.rs  main.rs
imgen/src/rpc/: get_spawn_image.rs  mod.rs
message-center/: Cargo.toml
message-center/src/: amqp.rs  config.rs  lib.rs  main.rs  message.rs
module-catching/: Cargo.toml
module-catching/src/: config.rs  main.rs  spawning.rs  state.rs
module-catching/src/command/: catch.rs  mod.rs
module-general/: Cargo.toml
module-general/src/: config.rs  main.rs  state.rs
module-general/src/command/: balance.rs  mod.rs  pick.rs  start.rs
module-market/: Cargo.toml
module-market/src/: config.rs  main.rs
module-market/src/command/: mod.rs
module-market/src/command/market/: add.rs  buy.rs  mod.rs  remove.rs  search.rs
module-pokedex/: Cargo.toml
module-pokedex/src/: config.rs  main.rs  state.rs
module-pokedex/src/command/: mod.rs  pokedex.rs
module-pokedex/src/command/pokedex/: info.rs  mod.rs  search.rs
module-pokedex/src/command/pokemon/: favorite.rs  info.rs  list.rs  mod.rs  nickname.rs  select.rs
protobuf-elixir/: README.md  mix.exs
protobuf-elixir/lib/poketwo/database/v1/: filters.pb.ex  models.pb.ex  service.pb.ex
protobuf-elixir/lib/poketwo/discord/v1/: models.pb.ex
protobuf-elixir/lib/poketwo/gateway/v1/: events.pb.ex
protobuf-elixir/lib/poketwo/imgen/v1/: models.pb.ex  service.pb.ex
protobuf-python/: build.py  pyproject.toml
protobuf-python/poketwo/database/v1/: models_pb2.py  service_pb2.py
protobuf-python/poketwo/discord/v1/: models_pb2.py
protobuf-python/poketwo/gateway/v1/: events_pb2.py
protobuf-rust/: Cargo.toml  build.rs
protobuf-rust/src/: lib.rs
protobuf-rust/src/poketwo/: mod.rs
protobuf-rust/src/poketwo/database/: mod.rs
protobuf-rust/src/poketwo/database/v1/: mod.rs
protobuf-rust/src/stubs/: poketwo.discord.v1.rs  poketwo.gateway.v1.rs
protobuf/poketwo/database/v1/: filters.proto  models.proto  service.proto
protobuf/poketwo/discord/v1/: models.proto
protobuf/poketwo/gateway/v1/: events.proto
protobuf/poketwo/imgen/v1/: models.proto  service.proto
resources/locales/de-DE/: main.ftl  pokedex.ftl
resources/locales/en/: catching.ftl  errors.ftl  general.ftl  main.ftl  pokedex.ftl
resources/locales/en-US/: commands.ftl  errors.ftl  general.ftl  main.ftl  market.ftl  pokedex.ftl
resources/locales/es/: pokedex.ftl
resources/locales/es-ES/: main.ftl
resources/locales/fr/: main.ftl
resources/locales/fr-FR/: pokedex.ftl
resources/locales/hi/: pokedex.ftl
resources/locales/hi-IN/: main.ftl
resources/locales/ja/: main.ftl  pokedex.ftl
resources/locales/ko/: pokedex.ftl
resources/locales/pl/: main.ftl
resources/locales/pt-BR/: main.ftl  pokedex.ftl
resources/locales/zh-CN/: main.ftl  pokedex.ftl
resources/locales/zh-Hans/: catching.ftl  errors.ftl  general.ftl  main.ftl  pokedex.ftl
resources/locales/zh-Hant/: catching.ftl  errors.ftl  general.ftl  main.ftl  pokedex.ftl
resources/locales/zh-TW/: pokedex.ftl
utils/: Cargo.toml
utils/src/: lib.rs  pagination.rs
