[workspace]
members = [
  "command-framework",
  "command-framework-macros",
  "emojis",
  "gateway",
  "gateway-client",
  "i18n-rust",
  "imgen",
  "module-catching",
  "module-general",
  "module-pokedex",
  "protobuf-rust",
]

[patch.crates-io]
fluent-bundle = { git = 'https://github.com/oliver-ni/fluent-rs' }
# fluent-cli = { git = 'https://github.com/oliver-ni/fluent-rs' }
# fluent-fallback = { git = 'https://github.com/oliver-ni/fluent-rs' }
# fluent-pseudo = { git = 'https://github.com/oliver-ni/fluent-rs' }
# fluent-resmgr = { git = 'https://github.com/oliver-ni/fluent-rs' }
fluent-syntax = { git = 'https://github.com/oliver-ni/fluent-rs' }
# fluent-testing = { git = 'https://github.com/oliver-ni/fluent-rs' }
fluent = { git = 'https://github.com/oliver-ni/fluent-rs' }
intl-memoizer = { git = 'https://github.com/oliver-ni/fluent-rs' }

[profile.dev.package.adler]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.imageproc]
opt-level = 3
