[package]
name = "poketwo-command-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
futures-util = "0.3.21"
lapin = "2.1.1"
poketwo-command-framework-macros = { version = "0.1.0", path = "../command-framework-macros" }
poketwo-gateway-client = { version = "0.1.0", path = "../gateway-client" }
poketwo-i18n = { version = "0.1.0", path = "../i18n-rust" }
serde_json = "1.0.81"
tracing = "0.1.34"
twilight-http = "0.11.0"
twilight-interactions = "0.11.0"
twilight-model = "0.11.0"

[features]
