[package]
name = "poketwo-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
figment = { version = "0.10.6", features = ["env", "toml", "json", "yaml"] }
futures-util = "0.3.21"
lapin = "2.1.1"
lazy_static = "1.4.0"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
twilight-cache-inmemory = "0.10.1"
twilight-gateway = "0.10.1"
twilight-model = "0.10.1"

[features]
