[package]
name = "poketwo-i18n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16.0"
fluent-templates = { git = "https://github.com/XAMPPRocky/fluent-templates.git", version = "0.7.1" }

[features]
