[package]
name = "poketwo-imgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
figment = { version = "0.10.6", features = ["env", "toml", "json", "yaml"] }
image = "0.24.2"
imageproc = "0.23.0"
lazy_static = "1.4.0"
poketwo-protobuf = { version = "0.1.0", path = "../protobuf-rust" }
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
