[package]
name = "poketwo-message-center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
figment = { version = "0.10.6", features = ["env", "toml", "json", "yaml"] }
futures-util = "0.3.21"
lapin = "2.1.1"
lazy_static = "1.4.0"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
twilight-http = "0.12.0"
twilight-model = "0.12.1"

[features]
