[package]
name = "poketwo-module-pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
figment = { version = "0.10.6", features = ["env", "toml", "json", "yaml"] }
futures-util = "0.3.21"
lapin = "2.1.1"
lazy_static = "1.4.0"
poketwo-gateway-client = { version = "0.1.0", path = "../gateway-client" }
serde = "1.0.137"
serde_json = "1.0.80"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
twilight-http = "0.10.2"
twilight-interactions = "0.10.1"
twilight-model = "0.10.2"

[features]
