[package]
name = "poketwo-module-pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.57"
figment = { version = "0.10.6", features = ["env", "toml", "json", "yaml"] }
futures-util = "0.3.21"
lapin = "2.1.1"
lazy_static = "1.4.0"
poketwo-command-framework = { version = "0.1.0", path = "../command-framework" }
poketwo-i18n = { version = "0.1.0", path = "../i18n-rust" }
poketwo-protobuf = { version = "0.1.0", path = "../protobuf-rust" }
serde = "1.0.137"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
twilight-http = "0.10.2"
twilight-interactions = "0.10.1"
twilight-model = "0.10.2"
twilight-util = { version = "0.10.1", features = ["builder"] }

[features]
