[package]
name = "poketwo-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.0"
prost-types = "0.10.0"
twilight-model = "0.10.1"

[build-dependencies]
glob = "0.3.0"
tonic-build = "0.7.0"

[features]
