[package]
name = "poketwo-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
poketwo-command-framework = { version = "0.1.0", path = "../command-framework" }
twilight-model = "0.11.2"
